Inserted comments to all CSS and HTML used by the front page. Grouped together media queryies for each section. Altered banner text and layout. Organised SASS to be more reusable. Removed exta span tags from contact form. Created on-click behavior for links. Footer links now underline on hover. Removed redundant CSS. Split service card styling into base styles and specific styles for that page. Altered margins in testimonials in mobile view. Altered text and spacing CSS in news section. Removed link from latest news heading. Added transition to service card hover state. Altered text styling in footer.

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -60,3 +60,14 @@ h3 {
 body.space {
     padding-top: 72px;
 }
+
+
+// .space{
+//     padding-top: 2.6rem;
+// }
+
+// @media (max-width: 770px){
+//     .space{
+//         padding-top: 1.7rem;
+//     }
+// }
