--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,59 +1,51 @@
 ////////////////////////////////////////
-/// banner
+/// Header
 ///////////////////////////////////////
 
-.header-img-container{
+.banner-large {
     width: 100%;
-    height: 80vh;//700px;
-    //position: relative;
-    overflow: hidden;
+    height: 80vh;
+
     background-image: url("images/banner.png");
     background-size: cover;
     background-position: center;
 
+    // Vertically align all content to the bottom
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: flex-end;
-    color: white;
+}
 
+.front-header-content {
+    padding-left: 10px;
+    padding-right: 10px;
+
+    color: white;
     text-align: center;
 
     h1 {
-        font-size: $font-sz-1;
-        margin-bottom: 50px;
+        font-size: 2.8rem;
         line-height: 1.3;
 
-        @include mq('md') {
-            font-size: 4rem;
-            margin-bottom: 30px;
-        }
+        margin-bottom: 50px;    // Bottom offset (3)
     }
 
     p {
-        font-size: $font-sz-4;
-        margin-bottom: 140px;
+        font-size: $font-sz-5;
 
-        @include mq('md') {
-            margin-bottom: 160px;
-        }
-    }
-
-    .container {
-        padding-left: 2px;
-        padding-right: 2px;
+        padding: 0 10px;    // Force line break for medium mobile sizes
+        margin-bottom: 140px;   // Bottom offset (2)
     }
 }
 
-#findOutMore {
+#find-out-more {
     display: block;
-    font-size: $font-sz-4;
-    margin: 0;
-    font-weight: 300;
-    margin-bottom: 20px;
+    width: 200px;
+    margin: 0 auto 20px auto;   // Bottom offset (1)
 
-    p {
-        margin-bottom: 0;
+    span {
+        font-size: $font-sz-4;
+        font-weight: 400;
     }
 
     i {
@@ -62,53 +54,56 @@
     }
 }
 
-// .space{
-//     padding-top: 2.6rem;
-// }
+@media only screen and (min-width: map-get($breakpoints, 'sm')) {
+    .front-header-content {
 
-// @media (max-width: 770px){
-//     .space{
-//         padding-top: 1.7rem;
-//     }
-// }
+        h1 {
+            font-size: 4rem;
+            margin-bottom: 30px;    // Bottom offset (3)
+        }
+    
+        p {
+            font-size: $font-sz-4;
+            margin-bottom: 160px;   // Bottom offset (2)
+        }
+    }
+}
 
 ////////////////////////////////////////
 /// Promotion
 ///////////////////////////////////////
 
-.promo-img {
-    border-radius: 50%;
-    width: 100%;
-
-    display: block;
-    margin: 0 auto;
-}
-
+//TODO: Create a standard text sizing for h3 and paragraphs with breakponts
 .promo-text {
-    text-align: center;
-
-    @include mq('lg') {
-        text-align: left;
-
-        padding: 0 80px;
-    }
 
     h3 {
         margin-bottom: 50px;
-
         font-weight: 700;
-        @include mq('md') {
-            font-size: $font-sz-4;
-        }
     }
 
     p {
         font-size: $font-sz-6;
-        @include mq('md') {
+    }
+}
+
+@media only screen and (min-width: map-get($breakpoints, 'md')) {
+
+    .promo-text {
+        h3 {
+            font-size: $font-sz-4;
+        }
+        p {
             font-size: $font-sz-5;
             line-height: 1.5;
         }
+    }
+}
 
+@media only screen and (min-width: map-get($breakpoints, 'lg')) {
+
+    .promo-text {
+        text-align: left;
+        padding: 0 80px;
     }
 }
 
@@ -116,130 +111,95 @@
 /// Services
 ///////////////////////////////////////
 
-.our-services {
-
+// Services section
+.ser-front.our-services-base {
     padding: 10px 0 50px 0;
-
-    @include mq('md') {
-        padding: 20px 0 50px 0;
-    }
-
-    @include mq('lg') {
-        padding: 50px 0 50px 0;
-    }
-
-
-    background-color: #DADADA;
-    height: auto;
-    .ser-ico {
-        display: inline-block;
-        color: #FF7900;
-        background-color: rgba(#fff, .8);
-        padding-top: .65rem;        // <--
-        width: 5rem;                //
-        height: 5rem;               // Icon and background size and allignment
-        font-size: 2.5rem;          //
-        border-radius: 50%;         // -->
-    }
-    .ser-title {
-        display: none;              // No title when in mobile
-        text-align: center;
-        color: #fff;
-    }
-
-    p {
+    
+    p { // Sub-heading
         margin-top: 20px;
         font-size: $font-sz-5;
     }
+}
 
-    .ser {
-
+// Specialise base services section style to suit front page
+.ser-front {
+    .ser-base {
         margin-top: 30px;
-
-        text-align: center;
-        h3, p {
-            color: white;
-        }
+    }
+    
+    .ser-con-base {
         h3 {
             font-size: $font-sz-5;
             margin: .5rem 0;
         }
+    
         p {
-            
             font-size: $font-sz-6;
-            font-weight: 500;
             max-width: 250px;
             margin: 0 auto 1rem;   // Centering paragraph as it has a set width giving spacing aswell.
         }
-        .ser-con {
-            background-color: #FF7900;
-            border-radius: 10px;
+    }
+    
+    // Icon and background
+    .ser-ico-base { 
+        padding-top: .65rem;        // <--
+        width: 5rem;                //
+        height: 5rem;               // Icon and background size and allignment
+        font-size: 2.5rem;          //
+    }
+    
+    // Service content
+    .ser-con-base {
+        padding: 30px;
+    }
+}
 
-            display: block;
-            padding: 30px;
-        }
-        .ser-btn {
-            width: 180px;
-            margin: 0 auto;
+// Heading and sub-heading wrapper
+.ser-title {
+    display: none;              // No title when in mobile
+    text-align: center;
+    color: #fff;
+}
 
-            background-color: rgba(#fff, .95);
-            border: none;
-            border-radius: 5px;
-            padding: .4rem 1rem;
-            color: #FF7900;
-            text-transform: uppercase;
-            font-weight: 600;
-            &:hover {
-                background-color: rgba(#fff, .85);
-            }
-        }
+// "READ MORE" button
+.ser-btn {
+    width: 180px;
+    margin: 0 auto;
 
-        &:hover {
-            .ser-con {
-                background-color: white;
-            }
-
-            .ser-btn {
-                background-color: #FF7900;
-                color: white;
-            }
-            h3, p {
-                color: #FF7900;
-            }
-
-            h3 {
-                font-weight: 800;
-            }
-
-            p {
-                font-weight: 800;
-            }
-
-            .ser-ico {
-                background-color: #FF7900;
-
-                i {
-                    color: white;
-                }
-            }
-        }
+    background-color: rgba(#fff, .95);
+    border: none;
+    border-radius: 5px;
+    padding: .4rem 1rem;
+    color: #FF7900;
+    text-transform: uppercase;
+    font-weight: 600;
+    &:hover {
+        background-color: rgba(#fff, .85);
     }
 }
 
 
-@media only screen and (min-width: 992px) {
-    .our-services {
-        background-color: #FF7900;      // Background color changes to card color to mask shape.
+@media only screen and (min-width: map-get($breakpoints, 'md')) {
+    .ser-front.our-services-base {
+        padding: 20px 0 50px 0;
+    }
+}
+
+@media only screen and (min-width: map-get($breakpoints, 'lg')) {
+    .ser-front.our-services-base {
+
+        padding: 50px 0 50px 0;
+
         .ser-title {
             display: block;               // Title is diplayed in desktop sizes.
         }
-        .ser-ico {
+        .ser-ico-base {
             padding-top: .5rem;           // <-- Increasing Icon size 
             width: 6rem;                  //
             height: 6rem;                 //
             font-size: 3.5rem;            // --> 
         }
-        .ser {
+        .ser-base {
             h3 {
                 font-weight: 600;
                 margin: 1rem 0;
@@ -255,7 +215,7 @@
                 margin: .5rem auto 1.5rem;
             }
 
-            .ser-con {
+            .ser-con-base {
                 padding: 20px 10px;
             }
         }
@@ -311,14 +271,15 @@
     }
 }
 
+// Colours left and right carousel controls orange
 .carousel-control-prev-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='rgb(255,120,0)' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e");
 }
-
 .carousel-control-next-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='rgb(255,120,0)' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
 }
 
+// Sizing of carousel controls
 .carousel-control-prev-icon, .carousel-control-next-icon {
     width: 30px;
     height: 30px;
@@ -331,34 +292,30 @@
 
 .section-testimonials {
     background-color: $col-bg-grey;
-    // padding-top: 30px;
-    // padding-bottom: 15px;
 
-    h2 {
+    h2 {    
+        // add spacing below heading
         margin-bottom: 30px;
-    }
-
-    @include mq('md') {
-        //padding-top: 60px;
-        h2 {
-            margin-bottom: 60px;
-        }
     }
 }
 
 .testimonial-card {
     background-color: white;
-    
-    padding: 15px 20px 15px 20px;
-    margin-left: 0;
-    margin-right: 0;
+    padding: 10px 0;
 
+    // Reduce .row margins
+    margin-left: -5px;
+    margin-right: -5px;
+
+    // Spacing between each testimonial
     margin-top: 40px;
 
     img {
-        width: 100px;
-        border-radius: 50%;
+        width: 80px;
+        border-radius: 10px;
         float: right;
+        margin-left: 15px;
+        margin-right: 0;
     }
 
     button {
@@ -366,63 +323,67 @@
         margin-right: auto;
     }
 
+    // Restore .row margins for small breakpoints and larger
     @include mq('sm') {
         margin-left: -15px;
         margin-right: -15px;
     }
-
 }
 
+// Set image to left for every other testimonial
 .testimonial-card:nth-child(even) {
 
     h3 {
+        // Offset heading so paragraph is directly bellow
         margin-left: 115px;
     }
 
     img {
         float: left;
+        margin-left: 0;
         margin-right: 15px;
     }
 
-    @include mq('md') {
-        h3 {
-            margin-left: 0;
-        }
-    }
+}
+
+// Adds space between text and button
+.testimonial-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 @media only screen and (min-width: map-get($breakpoints, 'md')) {
 
+    .section-testimonials {
+        //padding-top: 60px;
+        h2 {
+            margin-bottom: 60px;
+        }
+    }
+
+    // Remove heading indent for testimonials with image on the left.
+    .testimonial-card:nth-child(even)  h3 {
+        margin-left: 0;
+    }
+
     .testimonial-card {
-
         background-color: none;
-
         padding: 0;
-        
 
         img {
             width: 100%;
             border-radius: 50%;
         }
-
-        a {
-            display: block;
-            margin-top: auto;
-        }
-
-        button {
-            @include button($col-primary);
-        }
-
     }
 
     .testimonial-content {
         background-color: white;
-
         padding: 20px 0 20px 20px;
     }
 
-    .testimonial-img-bg {
+    // Gradient hides background color behind image that's revealed by border radius.
+    .testimonial-img-bg {   // right image
         background: linear-gradient(to right, white,  white 49%, $col-bg-grey 50%);
     }
 
@@ -432,6 +393,7 @@
             background: linear-gradient(to right, $col-bg-grey,  $col-bg-grey 49%, white 50%);
         }
 
+        // Swap content and image columns
         .testimonial-content {
             order: 2;
         }
@@ -451,6 +413,7 @@
 ////////////////////////////////////////
 /// Latest News
 ///////////////////////////////////////
+
 .section-news {
     background-color: $col-bg-lightBlue;
 
@@ -459,48 +422,31 @@
         height: auto;
     }
 
-    >h2 {   // Letest news heading
-        //padding-top: 35px;
+    // section heading
+    >h2 {   
         padding-bottom: 10px;
     }
 
+    // section sub-heading
     >p {
         font-size: $font-sz-5;
         text-align: center;
         margin-bottom: 0;
     }
-
-    >div {
-        @include mq('md') {
-            // height: 418px;
-            // overflow: hidden;
-        }
-    }
-
-    >div {
-        @include mq('lg') {
-            height: auto;
-            overflow: default;
-        }
-    }
 }
 
+// Spacing between rows of news cards
 .news-card {
     margin-top: 30px;
-
 }
 
 .news-card-content {
     height: 200px;
-
     padding: 28px 22px;
-
-    @include mq('md') {
-        padding: 25px 20px 30px 20px;
-    }
 
     background-color: white;
 
+    // Article heading
     h3 {
         font-weight: 500;
         color: $col-text-grey;
@@ -519,12 +465,7 @@
         @include button($col-primary);
 
         font-size: $font-sz-6;
-        padding: 2px 25px 0 25px;
         height: 30px;
-
-        @include mq('md') {
-            padding: 2px 20px 0 20px;
-        }
     }
 
     small {     // "by" text
@@ -546,4 +487,15 @@
     justify-content: space-between;
     align-items: flex-end;
     min-width: 220px;
+}
+
+@media only screen and (min-width: map-get($breakpoints, 'md')) { 
+    
+    .news-card-content {
+        padding: 25px 20px 30px 20px;
+
+        button {
+            padding: 2px 15px 0 15px;
+        }
+    }
 }
