--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -11,8 +11,14 @@
     padding: 3px 13px 0 13px;
     height: 35px;
 
+    transition: background-color 80ms ease-out;
+
     &:hover {
-        background-color: darken($color, 6%);
+        background-color: darken($color, 10%);
+    }
+
+    &:active {
+        box-shadow: 0 0 3pt 2pt $col-primary;
     }
 }
 
