--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -30,34 +30,29 @@
     padding-bottom: 15px;
 }
 
-.ser-min.our-services {
+// Remove default padding for "section" elements
+.ser-min.our-services-base {
     padding: 0;
+}
 
-    .ser {
-        margin-top: 0;
+// Sizing for service icons
+.ser-min .ser-con-base {
+    margin: 20px;
+    padding: 10px;
+    width: 150px;
 
-        .ser-con {
-            padding: 0;
-            margin: 20px;
-            padding: 10px;
-
-            width: 150px;
-            height: 120px;
-
-            h3 {
-                margin: 10px 0 0 0;
-            }
-
-        }
+    h3 {
+        margin: 10px 0 0 0;
     }
-
-    .ser-ico {
+    .ser-ico-base {
+        padding-top: .45rem;
         font-size: 2.1rem;
         height: 4rem;
         width: 4rem;
     }
 }
 
+// wrapper for min cards
 .ser-min-inner {
     display: flex;
     justify-content: center;
@@ -70,15 +65,11 @@
         color: #FF7900;
     }
 
-    h3 {
+    h3, p {
         font-weight: 800;
     }
 
-    p {
-        font-weight: 800;
-    }
-
-    .ser-ico {
+    .ser-ico-base {
         background-color: #FF7900;
 
         i {
