--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,7 +17,8 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
         'mixins';
 
 // Base Styles
-@import 'base';
+@import 'base',
+        'servicesbase';
 
 // Main Sections
 @import 'main',
