Reverted to previous padding applied by ".space". Fixed bug causing JavaScript not to load on about-us page. Alterd formattin on about-us html.

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -57,10 +57,14 @@ h3 {
 }
 
 // Vertical spacing
-body{
-    .space {
-        padding-top: 40px;  // altered from 72 px
-    }
+// body{
+//     .space {
+//         padding-top: 40px;  // altered from 72 px
+//     }
+// }
+
+body.space {
+    padding-top: 72px;
 }
 
 
