--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,6 +3,9 @@
     font-family: Montserrat, Arial;
 }
 
+main {
+    min-height: calc(100vh - (330px + 90px));   // viewport height - (footer height + nav height)
+}
 
 a {
     color: inherit;
@@ -77,3 +80,17 @@ body.space {
 //         padding-top: 1.7rem;
 //     }
 // }
+
+.orange-heading {
+    background-color: $col-primary;
+    color: white;
+
+    padding: 30px 0 10px 0;
+
+    h2 {
+        font-size: $font-sz-2;
+        text-align: left;
+        text-transform: capitalize;
+        margin-bottom: 0;
+    }
+}
