--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -15,6 +15,10 @@
     margin-top: 1rem;
     margin-bottom: 0.9rem;
     margin-left: 1rem;
+
+    @include mq('lg') {
+        margin-left: 0;
+    }
 }
 
 // Wrapper for navigation links
@@ -50,6 +54,10 @@
     &:hover {
         color: darken($col-primary, 10%);
     }
+}
+
+.search-bar:focus {
+    box-shadow: 0 0 0 0.2rem rgba($col-primary, 0.7);
 }
 
 // Search button icon.
