--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,7 +30,8 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
         'entry';
 
 // Pages
-@import 'news';
+@import 'news',
+        'search';
 
 // Plugins
 @import 'contact';
