--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -59,6 +59,11 @@ h3 {
     font-weight: 600;
 }
 
+h4 {
+    font-size: $font-sz-6;
+    font-weight: 600;
+}
+
 // Vertical spacing
 // body{
 //     .space {
