--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,11 @@
 
 ////////////////////////////////////////
+/// Base values
+///////////////////////////////////////
+$base-font-size:              16;
+$base-line-height:            24;
+
+////////////////////////////////////////
 /// Colours
 ///////////////////////////////////////
 $col-primary: #ff7800;
