--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -22,15 +22,12 @@
     }
 }
 
-@function px-to-pc($target, $context) {
-    @return ($target / $context) * 100%;
- }
-
-
- @function px-to-rem($target, $context) {
-   @return ($target / $context) * 1rem;
- }
-
+@mixin reset-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
 
  @mixin mq($break) {
 
